Changed my mind, don't let callers choose a database, leave that up to the server
