# server/auth/index.ts
@@ -1,10 +1,9 @@
-import type { DataSource, User } from "../database/schemas.js";
+import type { User } from "../database/schemas.js";
 import { addJwtToBlacklist, jwtTokenFromRequest, newAccessToken } from "./jwt.js";
 import { asyncWrapper } from "../asyncWrapper.js";
 import { BadRequestError, DuplicateAccountError, UnauthorizedError } from "../errors/index.js";
 import { Context } from "./Context.js";
 import { destroyUser, findUserWithProperties, statsForUser, upsertUser } from "../database/io.js";
-import { isDataSourceId } from "../database/schemas.js";
 import { respondSuccess } from "../responses.js";
 import { Router } from "express";
 import { throttle } from "./throttle.js";
@@ -16,10 +15,7 @@ interface ReqBody {
 	newaccount?: unknown;
 	password?: unknown;
 	newpassword?: unknown;
-	source?: unknown;
 }
-
-const DEFAULT_SOURCE = "lowdb";
 
 async function generateSalt(): Promise<string> {
 	return await bcrypt.genSalt(15);
@@ -29,9 +25,10 @@ async function generateHash(input: string, salt: string): Promise<string> {
 	return await bcrypt.hash(input, salt);
 }
 
-async function userWithAccountId(source: DataSource, accountId: string): Promise<User | null> {
+async function userWithAccountId(accountId: string): Promise<User | null> {
 	// Find first user whose account ID matches
-	return await findUserWithProperties(source, { currentAccountId: accountId });
+	// TODO: Rename `currentAccountId` to `accountId`
+	return await findUserWithProperties({ currentAccountId: accountId });
 }
 
 /**
@@ -49,17 +46,12 @@ export function auth(this: void): Router {
 			asyncWrapper(async (req, res) => {
 				const givenAccountId = req.body.account;
 				const givenPassword = req.body.password;
-				const source = req.body.source ?? DEFAULT_SOURCE;
-				if (
-					typeof givenAccountId !== "string" ||
-					typeof givenPassword !== "string" ||
-					!isDataSourceId(source)
-				) {
+				if (typeof givenAccountId !== "string" || typeof givenPassword !== "string") {
 					throw new BadRequestError("Improper parameter types");
 				}
 
 				// ** Check credentials are unused
-				const storedUser = await userWithAccountId(source, givenAccountId);
+				const storedUser = await userWithAccountId(givenAccountId);
 				if (storedUser) {
 					throw new DuplicateAccountError();
 				}
@@ -74,10 +66,10 @@ export function auth(this: void): Router {
 					passwordHash,
 					passwordSalt,
 				};
-				await upsertUser(source, user);
+				await upsertUser(user);
 
 				// ** Generate an auth token and send it along
-				const access_token = await newAccessToken(source, user);
+				const access_token = await newAccessToken(user);
 				const { totalSpace, usedSpace } = await statsForUser(user.uid);
 				respondSuccess(res, { access_token, uid, totalSpace, usedSpace });
 			})
@@ -90,19 +82,17 @@ export function auth(this: void): Router {
 
 				const givenAccountId = req.body.account;
 				const givenPassword = req.body.password;
-				const source = req.body.source ?? DEFAULT_SOURCE;
 				if (
 					typeof givenAccountId !== "string" ||
 					typeof givenPassword !== "string" ||
 					givenAccountId === "" ||
-					givenPassword === "" ||
-					!isDataSourceId(source)
+					givenPassword === ""
 				) {
 					throw new BadRequestError("Improper parameter types");
 				}
 
 				// ** Get credentials
-				const storedUser = await userWithAccountId(source, givenAccountId);
+				const storedUser = await userWithAccountId(givenAccountId);
 				if (!storedUser) {
 					console.debug(`Found no user under account ${JSON.stringify(givenAccountId)}`);
 					throw new UnauthorizedError("Incorrect account ID or passphrase");
@@ -116,7 +106,7 @@ export function auth(this: void): Router {
 				}
 
 				// ** Generate an auth token and send it along
-				const access_token = await newAccessToken(source, storedUser);
+				const access_token = await newAccessToken(storedUser);
 				const uid = storedUser.uid;
 				const { totalSpace, usedSpace } = await statsForUser(uid);
 				respondSuccess(res, { access_token, uid, totalSpace, usedSpace });
@@ -139,19 +129,17 @@ export function auth(this: void): Router {
 				// Ask for full credentials, so we aren't leaning on a repeatable token
 				const givenAccountId = req.body.account;
 				const givenPassword = req.body.password;
-				const source = req.body.source ?? DEFAULT_SOURCE;
 				if (
 					typeof givenAccountId !== "string" ||
 					typeof givenPassword !== "string" ||
 					givenAccountId === "" ||
-					givenPassword === "" ||
-					!isDataSourceId(source)
+					givenPassword === ""
 				) {
 					throw new BadRequestError("Improper parameter types");
 				}
 
 				// ** Get credentials
-				const storedUser = await userWithAccountId(source, givenAccountId);
+				const storedUser = await userWithAccountId(givenAccountId);
 				if (!storedUser) {
 					throw new UnauthorizedError("Incorrect account ID or passphrase");
 				}
@@ -163,7 +151,7 @@ export function auth(this: void): Router {
 				}
 
 				// ** Delete the user
-				await destroyUser(source, storedUser.uid);
+				await destroyUser(storedUser.uid);
 
 				respondSuccess(res);
 			})
@@ -176,21 +164,19 @@ export function auth(this: void): Router {
 				const givenAccountId = req.body.account;
 				const givenPassword = req.body.password;
 				const newGivenPassword = req.body.newpassword;
-				const source = req.body.source ?? DEFAULT_SOURCE;
 				if (
 					typeof givenAccountId !== "string" ||
 					typeof givenPassword !== "string" ||
 					typeof newGivenPassword !== "string" ||
 					givenAccountId === "" ||
 					givenPassword === "" ||
-					newGivenPassword === "" ||
-					!isDataSourceId(source)
+					newGivenPassword === ""
 				) {
 					throw new BadRequestError("Improper parameter types");
 				}
 
 				// ** Get credentials
-				const storedUser = await userWithAccountId(source, givenAccountId);
+				const storedUser = await userWithAccountId(givenAccountId);
 				if (!storedUser) {
 					throw new UnauthorizedError("Incorrect account ID or passphrase");
 				}
@@ -204,7 +190,7 @@ export function auth(this: void): Router {
 				// ** Store new credentials
 				const passwordSalt = await generateSalt();
 				const passwordHash = await generateHash(newGivenPassword, passwordSalt);
-				await upsertUser(source, {
+				await upsertUser({
 					...storedUser,
 					passwordHash,
 					passwordSalt,
@@ -222,21 +208,19 @@ export function auth(this: void): Router {
 				const givenAccountId = req.body.account;
 				const newGivenAccountId = req.body.newaccount;
 				const givenPassword = req.body.password;
-				const source = req.body.source ?? DEFAULT_SOURCE;
 				if (
 					typeof givenAccountId !== "string" ||
 					typeof newGivenAccountId !== "string" ||
 					typeof givenPassword !== "string" ||
 					givenAccountId === "" ||
 					newGivenAccountId === "" ||
-					givenPassword === "" ||
-					!isDataSourceId(source)
+					givenPassword === ""
 				) {
 					throw new BadRequestError("Improper parameter types");
 				}
 
 				// ** Get credentials
-				const storedUser = await userWithAccountId(source, givenAccountId);
+				const storedUser = await userWithAccountId(givenAccountId);
 				if (!storedUser) {
 					throw new UnauthorizedError("Incorrect account ID or passphrase");
 				}
@@ -248,7 +232,7 @@ export function auth(this: void): Router {
 				}
 
 				// ** Store new credentials
-				await upsertUser(source, {
+				await upsertUser({
 					...storedUser,
 					currentAccountId: newGivenAccountId,
 				});
