# server/database/references.ts
@@ -1,17 +1,15 @@
-import type { AnyDataItem, CollectionID, DataSource } from "./schemas.js";
+import type { AnyDataItem, CollectionID } from "./schemas.js";
 import { isCollectionId } from "./schemas.js";
 
 // eslint-disable-next-line @typescript-eslint/no-unused-vars
 export class CollectionReference<T extends AnyDataItem> {
 	public readonly uid: Readonly<string>;
 	public readonly id: Readonly<CollectionID>;
-	public readonly source: DataSource;
 
-	constructor(uid: string, id: CollectionID, source: DataSource) {
+	constructor(uid: string, id: CollectionID) {
 		if (!isCollectionId(id)) throw new TypeError(`${JSON.stringify(id)} is not a collection ID`);
 		this.uid = uid;
 		this.id = id;
-		this.source = source;
 	}
 
 	get path(): string {
@@ -40,10 +38,6 @@ export class DocumentReference<T extends AnyDataItem> {
 
 	get path(): string {
 		return this.parent.path.concat("/", this.id);
-	}
-
-	get source(): DataSource {
-		return this.parent.source;
 	}
 
 	toString(): string {
