# server/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: Accountable
-  version: 0.2.2
+  version: 0.4.0
   description: This is the Accountable Server. It doesn't do much, because the Accountable client does most of the hard work. You can read the source code on [GitHub](https://github.com/AverageHelper/accountable-vue).
   license:
     name: GNU General Public License v3.0
@@ -101,8 +101,6 @@ paths:
                 password:
                   type: string
                   description: A passphrase to access the user's account. The user may change this later.
-                source:
-                  $ref: "#/components/schemas/DataSource"
       responses:
         200:
           description: Account has been added to the database with the given credentials
@@ -173,8 +171,6 @@ paths:
                 password:
                   type: string
                   description: A passphrase to access the user's account.
-                source:
-                  $ref: "#/components/schemas/DataSource"
       responses:
         200:
           description: Successfully logged in
@@ -266,8 +262,6 @@ paths:
                 password:
                   type: string
                   description: The passphrase to access the account.
-                source:
-                  $ref: "#/components/schemas/DataSource"
       responses:
         200:
           description: Operation succeeded
@@ -329,8 +323,6 @@ paths:
                 newpassword:
                   type: string
                   description: The new passphrase to access the account from now on.
-                source:
-                  $ref: "#/components/schemas/DataSource"
       responses:
         200:
           description: Operation succeeded
@@ -392,8 +384,6 @@ paths:
                 password:
                   type: string
                   description: The current passphrase to access the account.
-                source:
-                  $ref: "#/components/schemas/DataSource"
       responses:
         200:
           description: Operation succeeded
@@ -869,13 +859,6 @@ components:
         - tags
         - transactions
         - users
-    DataSource:
-      type: string
-      enum:
-        - lowdb
-        - mongodb
-      default: lowdb
-      description: Identifies the database to use.
   securitySchemes:
     jwt:
       type: http
